# markdown-editor

./: .gitignore  README.md  biome.json  eslint.config.js  index.html  lint-staged.config.js  package.json  pnpm-lock.yaml  test-regex.js  vite.config.ts
.github/workflows/: deploy.yml  release.yml
docs/: requirements.md
electron/: main.ts  preload.ts
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: window.json
src-tauri/icons/: icon.icns
src-tauri/locales/: ja-JP.nsh
src-tauri/src/: main.rs
src/components/: Toolbar.tsx
src/components/app/: EditorPane.tsx  OverlayLayer.tsx  QuickPickLayer.tsx  SidebarPanel.tsx  StatusBar.tsx  TitleBar.tsx
src/platform/: desktopApi.ts
src/utils/editor/: fileUtils.ts  number.ts  persistence.ts
